Fixed projects page footer overflow

--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -191,7 +191,8 @@
 .project_desc::-webkit-scrollbar-thumb {
   background: inherit;
   border-radius: 10px;
-  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .project_desc::-webkit-scrollbar-track {
@@ -275,7 +276,8 @@
 .ContributorList::-webkit-scrollbar-thumb {
   background: inherit;
   border-radius: 10px;
-  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .ContributorList::-webkit-scrollbar-track {
@@ -345,10 +347,10 @@
   .RightCard {
     margin: 0;
   }
-
+  /* 
   .container {
     margin-top: 120px;
-  }
+  } */
 }
 
 /* placeholder for footer (parallax effect) */
